[package]
name = "num_identities_const"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Provides a trait which holds a constant for ONE and ZERO of some types. Extension of num-traits crate."
repository = "https://github.com/sigurd4/num_identities_const"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moddef = "0.2.2"
num = "0.4.0"
fn_zip = "0.1.0"